# CelarisClient

./: .gitignore  LICENSE  README.md  UPDATES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-installers.yml  deploy-linux-repo.yml  release.yml
public/: splashscreen.html
scripts/: build-linux-repos.sh  celaris_bg.py
src/: App.tsx  main.tsx  sound.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clientmod.rs  coins.rs  java.rs  lib.rs  main.rs  news.rs  packs.rs  servers.rs  skins.rs  social.rs  spotify.rs  store.rs
src-tauri/src/launcher/: auth.rs  contract_tests.rs  download.rs  error.rs  mod.rs  mods.rs  resolver.rs  runner.rs
src/admin/: AdminPanel.stub.tsx  adminpanel.d.ts
src/components/: MatrixRain.tsx  Motifs.tsx  Rinnegan.tsx  SkinBody.tsx  SkinFace.tsx  SpaceBackground.tsx  TitleBar.tsx  ui.tsx
src/styles/: celaris.css
